--- a/index.html
+++ b/index.html
@@ -30,22 +30,53 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="time-block">
+      <div class="time-block row">
         <div class="col-md-3" id="hour">7AM</div>
+        <textarea id="7-txt"></textarea>
+        <button id="7-btn" class="saveBtn">Save</button>
       </div>
-      <div class="time-block">
+      <div class="time-block row">
         <div class="col-md-3" id="hour">8AM</div>
+        <textarea id="8-txt"></textarea>
+        <button id="8-btn" class="saveBtn">Save</button>
       </div>
-      <div class="time-block">
-       <div class="col-md-3" id="hour">9AM</div>
+      <div class="time-block row">
+        <div class="col-md-3" id="hour">9AM</div>
+        <textarea id="9-txt"></textarea>
+        <button id="9-btn" class="saveBtn">Save</button>
       </div>
-      <div class="time-block">
-      <div class="col-md-3"  id="hour">10AM</div>
-     
+      <div class="time-block row">
+        <div class="col-md-3" id="hour">10AM</div>
+        <textarea id="10-txt"></textarea>
+        <button id="10-btn" class="saveBtn">Save</button>
+      </div>
+      <div class="time-block row">
+        <div class="col-md-3" id="hour">11AM</div>
+        <textarea id="11-txt"></textarea>
+        <button id="11-btn" class="saveBtn">Save</button>
+      </div>
+      <div class="time-block row">
+        <div class="col-md-3" id="hour">12PM</div>
+        <textarea id="12-txt"></textarea>
+        <button id="12-btn" class="saveBtn">Save</button>
+      </div>
+      <div class="time-block row">
+        <div class="col-md-3" id="hour">1PM</div>
+        <textarea id="13-txt"></textarea>
+        <button id="13-btn" class="saveBtn">Save</button>
+      </div>
+      <div class="time-block row">
+        <div class="col-md-3" id="hour">2PM</div>
+        <textarea id="14-txt"></textarea>
+        <button id="14-btn" class="saveBtn">Save</button>
+      </div>
+      <div class="time-block row">
+        <div class="col-md-3" id="hour">3PM</div>
+        <textarea id="15-txt"></textarea>
+        <button id="15-btn" class="saveBtn">Save</button>
       </div>
     </div>
 
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
