--- a/index.html
+++ b/index.html
@@ -31,49 +31,49 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="time-block row">
-        <div class="col-md-3 hour">7AM</div>
-        <textarea class="col-md-6" id="7-txt"></textarea>
-        <button id="7-btn" class="saveBtn col-md-3">Save</button>
-      </div>
-      <div class="time-block row">
-        <div class="col-md-3 hour">8AM</div>
-        <textarea class="col-md-6" id="8-txt"></textarea>
-        <button id="8-btn" class="saveBtn col-md-3">Save</button>
-      </div>
-      <div class="time-block row">
-        <div class="col-md-3" id="hour">9AM</div>
+        <div class="col-md-3 hour">9AM</div>
         <textarea class="col-md-6" id="9-txt"></textarea>
         <button id="9-btn" class="saveBtn col-md-3">Save</button>
       </div>
       <div class="time-block row">
-        <div class="col-md-3" id="hour">10AM</div>
+        <div class="col-md-3 hour">10AM</div>
         <textarea class="col-md-6" id="10-txt"></textarea>
         <button id="10-btn" class="saveBtn col-md-3">Save</button>
       </div>
       <div class="time-block row">
-        <div class="col-md-3" id="hour">11AM</div>
+        <div class="col-md-3 hour" >11AM</div>
         <textarea class="col-md-6" id="11-txt"></textarea>
         <button id="11-btn" class="saveBtn col-md-3">Save</button>
       </div>
       <div class="time-block row">
-        <div class="col-md-3" id="hour">12PM</div>
+        <div class="col-md-3 hour">12PM</div>
         <textarea class="col-md-6" id="12-txt"></textarea>
         <button id="12-btn" class="saveBtn col-md-3">Save</button>
       </div>
       <div class="time-block row">
-        <div class="col-md-3" id="hour">1PM</div>
+        <div class="col-md-3 hour">1PM</div>
         <textarea class="col-md-6" id="13-txt"></textarea>
         <button id="13-btn" class="saveBtn col-md-3">Save</button>
       </div>
       <div class="time-block row">
-        <div class="col-md-3" id="hour">2PM</div>
+        <div class="col-md-3 hour">2PM</div>
         <textarea class="col-md-6" id="14-txt"></textarea>
         <button id="14-btn" class="saveBtn col-md-3">Save</button>
       </div>
       <div class="time-block row">
-        <div class="col-md-3" id="hour">3PM</div>
+        <div class="col-md-3 hour">3PM</div>
         <textarea class="col-md-6" id="15-txt"></textarea>
         <button id="15-btn" class="saveBtn col-md-3">Save</button>
+      </div>
+      <div class="time-block row">
+        <div class="col-md-3 hour">4PM</div>
+        <textarea class="col-md-6" id="16-txt"></textarea>
+        <button id="16-btn" class="saveBtn col-md-3">Save</button>
+      </div>
+      <div class="time-block row">
+        <div class="col-md-3 hour">5PM</div>
+        <textarea class="col-md-6" id="17-txt"></textarea>
+        <button id="17-btn" class="saveBtn col-md-3">Save</button>
       </div>
     </div>
 
